aws-nat-server.tf
/* NAT/VPN server */
resource "aws_instance" "nat" {
  ami                    = "${lookup(var.ami, "${var.region}-${var.platform}")}"
  instance_type          = "t2.nano"
  subnet_id              = "${aws_subnet.public_primary.id}"
  vpc_security_group_ids = ["${aws_security_group.default.id}", "${aws_security_group.nat.id}"]
  key_name               = "${aws_key_pair.deployer.key_name}"
  source_dest_check      = false

  tags = {
    Name = "nat"
  }

  connection {
    user        = "ubuntu"
    private_key = "${file("${path.module}/ssh/insecure-deployer")}"
  }

  provisioner "remote-exec" {
    inline = [
      "sudo iptables -t nat -A POSTROUTING -j MASQUERADE",
      "echo 1 | sudo tee /proc/sys/net/ipv4/conf/all/forwarding > /dev/null",

      /* Install docker */
      "curl -sSL https://get.docker.com/ | sudo sh",

      /* Initialize open vpn data container */
      "sudo mkdir -p /etc/openvpn",

      "sudo docker run --name ovpn-data -v /etc/openvpn busybox",

      /* Generate OpenVPN server config */
      "sudo docker run --volumes-from ovpn-data --rm gosuri/openvpn ovpn_genconfig -p ${var.vpc_cidr} -u udp://${aws_instance.nat.public_ip}",
    ]
  }
}
